--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   json_annotation: ^4.8.1
   provider: ^6.0.5
   equatable: ^2.0.5
+  webview_flutter: ^2.0.13
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -49,6 +50,7 @@ dev_dependencies:
   build_runner: ^2.1.5
 
   url_launcher: ^6.1.8
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
