--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
+  carousel_slider: ^4.2.1
+
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
